[package]
name = "mls-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "*"
openmls = { git = "https://github.com/openmls/openmls" }
tls_codec = { version = "0.3.0-pre.2", features = ["derive", "serde", "mls"] }

